@@ -8,6 +8,9 @@ Avro 1.6.0 (unreleased)
 
   IMPROVEMENTS
 
+    AVRO-836. Python "avro" commandline utility to display and write Avro files.
+    (Miki Tebeka via philz)
+
     AVRO-833. Don't require simplejson for python >= 2.6.
     (Miki Tebeka via philz)
 
